--- a/30-days-of-JS/index.html
+++ b/30-days-of-JS/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>30DaysOfScript:Inline Script</title>
+    <title>30DaysOfScript:Internal Script</title>
 </head>
 
 <body>
-    <button onclick="alert('Welcome to 30DaysOfJavaScript')">Click Me</button>
+    <script>
+        console.log('Welcome to 30DaysOfJavascript')
+    </script>
 </body>
 
 </html>
