--- a/30-days-of-JS/index.html
+++ b/30-days-of-JS/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>30DaysOfScript:Internal Script</title>
+    <title>30DaysOfScript:External Script</title>
+
 </head>
 
 <body>
-    <script>
-        console.log('Welcome to 30DaysOfJavascript')
-    </script>
+    <script src="introduction.js"></script>
 </body>
 
 </html>
